[gd_scene load_steps=3 format=3 uid="uid://dj483upl4d2l3"]

[ext_resource type="Script" path="res://game_a.gd" id="1_w183x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7q2ny"]

[node name="GameA" type="Node2D"]
script = ExtResource("1_w183x")

[node name="HandleBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 648.0
offset_bottom = 27.0

[node name="ColorRect" type="ColorRect" parent="HandleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85098, 0.384314, 0.0784314, 1)

[node name="Button" type="Button" parent="."]
offset_left = 314.0
offset_top = 294.0
offset_right = 378.0
offset_bottom = 358.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_7q2ny")
toggle_mode = true

[connection signal="gui_input" from="HandleBar/ColorRect" to="." method="_on_handle_bar_gui_input"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
